# random-forest-induced-similarity-measures-for-image-template-matching

./: Documentation  Readme.md  configuration
projects/RandomForestTemplateMatching/: BaseTemplateMatching.cpp  DecisionTreeClassifier.h  RandomForestTemplateMatching.pro
projects/helpers/rf/train/: RandomForestDecisionTrees.txt
rf_template_matching/: CMakeLists.txt
rf_template_matching/RandomForestTemplateMatching/: BaseTemplateMatching.h  DecisionTreeClassifier.cpp  LegacyTemplateMatching.cpp  LegacyTemplateMatching.h  RandomForest.cpp  RandomForest.h  RandomForestTemplateMatching.cpp  TemplateMatching.cpp  TemplateMatching.h  Utilities.h
rf_template_matching/helpers/dataset/train/: batches.meta.txt
